--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,8 @@ dependencies {
     //implementation 'ja.burhanrashid52:photoeditor:1.0.0'
     implementation project(':photoeditor')
     implementation 'androidx.cardview:cardview:1.0.0'
-
+    implementation 'com.ablanco.zoomy:zoomy:1.1.0'
     testImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
